fix icon alignment in new table rows

--- a/airbyte-webapp/src/components/connection/CatalogTree/next/CatalogTreeTableHeader.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/next/CatalogTreeTableHeader.module.scss
@@ -6,7 +6,7 @@
 }
 
 .headerContainer {
-  margin: variables.$spacing-md variables.$spacing-md variables.$spacing-sm variables.$spacing-sm;
+  margin: variables.$spacing-md variables.$spacing-md variables.$spacing-sm variables.$spacing-md;
   gap: variables.$spacing-sm;
   overflow: hidden;
   scrollbar-gutter: stable;
