--- a/airbyte-webapp/src/components/connection/CatalogTree/next/CatalogTreeTableRow.module.scss
+++ b/airbyte-webapp/src/components/connection/CatalogTree/next/CatalogTreeTableRow.module.scss
@@ -17,8 +17,7 @@
 .streamHeaderContent {
   background: colors.$white;
   border-bottom: 1px solid colors.$grey-50;
-  padding-right: variables.$spacing-md;
-  padding-left: variables.$spacing-sm;
+  padding: 0 variables.$spacing-md;
   margin-bottom: 1px;
   gap: variables.$spacing-sm;
   min-height: 50px;
